IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-pass/from-parse-only/esc_sequence.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="DEFVAR">
		<arg1 type="var">GF@antuh</arg1>
	</instruction>
	<instruction order="2" opcode="MOVE">
		<arg1 type="var">GF@antuh</arg1>
		<arg2 type="string">tau\093ntaohu\319natuh\204toauhn</arg2>
	</instruction>
</program>
