IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-fail/move1.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="MOVE">
		<arg1 type="var">GF@antuh</arg1>
		<arg2 type="string">tau\093ntaohu\319natuh\204toauhn</arg2>
	</instruction>
</program>
